tests/errors/enum-invalid-value.ssv
status:string[active, inactive, pending]
active
unknown
